Resolve IntelliJ warnings